# oact

./: CMakeLists.txt  README.md
include/oact/: ActionManager.h
src/: ActionManager.cpp
